--- a/ChatRoomApp.UI/Pages/Index.cshtml
+++ b/ChatRoomApp.UI/Pages/Index.cshtml
@@ -4,3 +4,33 @@
     ViewData["Title"] = "Home page";
 }
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+
+<head>
+    <meta charset="UTF-8">
+    <title>slanted menu</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+</head>
+
+<body>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <section class="hero">
+            <h1>WELCOME <br> <span> @User.Identity.Name</span></h1>
+        </section>
+    }
+    else
+    {
+        <section class="hero">
+            <h1>JONTES EXCLUSIVE <br> <span> CHATROOMS</span></h1>
+        </section>
+    }
+
+</body>
+
+
